css/style.css
* {
  box-sizing: border-box; 
}
header {
  padding: 15px 15px 18px 15px;
  background-color: #FE4B74;
}
header ul {
  display: inline;
}
header ul li {
  position: relative;
  display: inline;
}
header ul li a {
  text-decoration-line:none;
  color: white;
}
nav {
  float: none;
  text-align: center; 
  align-content:center;
  width: 100%;
  background-color: #FE4B74;
}
nav a:hover {
  text-decoration-line: none;
  background-color: #feb236;
}
h1 {
  width: 100%;
  text-align: center;
  margin-top: 80px;
  margin-bottom: 50px;
  font-size: 40px; 
}
body {
  margin: 0;
  font-family: 'HelveticaNeue';
  background-color: #373B44;
}
section {
  width: 100%;
  padding: 0 5%;
  color: white;
  margin: 5px;
}
a {
  font-family: 'Roboto Condensed', sans-serif;
  font-size: 20pt;
  padding: 15px 15px 15px 15px;
}
p {
  font-size: 1.5em;
  color: #C3CAD9;
  margin-left: auto;
  margin-right: auto;
}
img {
  width: 100%;
  text-align: center;
  margin-top: 80px;
  margin-bottom: 50px;
}
iframe {
  height: 550px;
  width: 75%;
}
#map {
  height: 400px;
  width: 100%;
  font-size: 20px;
  margin-top: 80px;
  margin-bottom: 50px;
}
.intro {
  font-family: 'Roboto Slab', serif;
  color: white;
}
.description-skills {
  font-family: 'Roboto Slab', serif;
  font-size: 15pt;  
}
.divider {
  width: 100%;
  padding: 1px 1px 1px 70px;
  background-color: #a2b9bc;
  color: white;
}
.description {
  font-family: 'Roboto Slab', serif;
}
.aboutme {
  font-family: 'Roboto Slab', serif;
  color: white;
  text-align: center;
  background-color: #616161;
  width: 90%;
  padding: 5px 5px 5px 5px;
  display:block;
  margin-left: auto; 
  margin-right: auto;
  border-style: solid;
  border-width: 2px;
  border-color: white;
}
.volunteer {
  font-family: 'Roboto Slab', serif;
  color: #87bdd8;
  text-align: center;
}
.interests {
  font-family: 'Roboto Slab', serif;
  font-size: 15pt;
}
.center {
  text-align: center;
}

